fix code on second example

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ etalics("#one",
 
 	<section>
 		<pre>
-etalics("#one",
+etalics("#two",
 	(x, y, i) => [
-		Math.tan(x + y + i / 10),
-		Math.tan(x + y + i / 10),
-		Math.tan(x + y + i / 10)
+		Math.sin(x - y + i / 10),
+		Math.sin(x - y + i / 10),
+		Math.sin(x + y + i / 10)
 	]
 );
 		</pre>
@@ -56,9 +56,9 @@ etalics("#one",
 
 	etalics("#two",
 		(x, y, i) => [
-			Math.cos(x - y + i / 10),
-			Math.cos(x - y + i / 10),
-			Math.cos(x + y + i / 10)
+			Math.sin(x - y + i / 10),
+			Math.sin(x - y + i / 10),
+			Math.sin(x + y + i / 10)
 		]
 	);
 	</script>
